--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue2-leaflet": "^2.6.0",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.1.0",
+    "vue-click-outside": "^1.1.0",
     "weekstart": "^1.0.1"
   },
   "devDependencies": {
