--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.1.0",
     "vue-click-outside": "^1.1.0",
+    "v-clipboard": "^2.2.3",
+    "v-tooltip": "^2.0.3",
+    "vue2-google-maps": "^0.10.7",
     "weekstart": "^1.0.1"
   },
   "devDependencies": {
