--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
     "moment-timezone": "^0.5.32",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0",
-    "vee-validate": "^3.4.3",
+    "v-clipboard": "^2.2.3",
+    "v-tooltip": "^2.0.3",
+    "vee-validate": "^2.2.15",
+    "vee-validate-locale-ja": "^1.0.5",
     "vue": "^2.6.12",
     "vue-chartkick": "^0.6.1",
+    "vue-click-outside": "^1.1.0",
     "vue-datetime": "^1.0.0-beta.14",
     "vue-loader": "^15.9.5",
     "vue-select": "^3.11.2",
     "vue-template-compiler": "^2.6.12",
     "vue2-daterange-picker": "^0.6.2",
+    "vue2-google-maps": "^0.10.7",
     "vue2-leaflet": "^2.6.0",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.1.0",
-    "vue-click-outside": "^1.1.0",
-    "v-clipboard": "^2.2.3",
-    "v-tooltip": "^2.0.3",
-    "vue2-google-maps": "^0.10.7",
     "weekstart": "^1.0.1"
   },
   "devDependencies": {
