--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,13 @@ SMTP_USER_NAME=''
 SMTP_USER_PASSWORD=''
 SUPPORT_EMAIL=''
 
+# AWS S3
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=
+CDN_HOST=
+
+
 REDIS_URL=redis://localhost:6379/1
 
 DOMAIN=http://localhost:3000
