Remove admin lte

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "admin-lte": "^3.0.5",
     "axios": "^0.21.2",
     "bootstrap-vue": "^2.17.3",
     "chart.js": "^2.9.4",
@@ -84,7 +83,8 @@
     "simplemde": "^1.11.2",
     "summernote": "0.8.16",
     "twitter-bootstrap-wizard": "^1.2.0",
-    "typeahead.js": "^0.11.1"
+    "typeahead.js": "^0.11.1",
+    "sass-loader": "^8.0.0"
   },
   "devDependencies": {
     "apidoc": "^0.25.0",
