--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "admin-lte": "^3.0.5",
     "axios": "^0.21.2",
     "bootstrap-vue": "^2.17.3",
     "chart.js": "^2.9.4",
