--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
+    "@rails/ujs": "^6.1.4-1",
     "@rails/webpacker": "4.3.0",
     "admin-lte": "^3.0.5",
     "axios": "^0.21.2",
