--- a/theme/package.json
+++ b/theme/package.json
@@ -14,7 +14,6 @@
   "devDependencies": {
     "braces": "^2.3.2",
     "browser-sync": "^2.26.7",
-    "gulp": "^4.0.1",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.2.0",
@@ -46,6 +45,7 @@
     "bootstrap-touchspin": "^4.2.5",
     "britecharts": "^2.12.0",
     "chart.js": "^2.9.3",
+    "core-util-is": "^1.0.3",
     "datatables.net": "^1.10.19",
     "datatables.net-bs4": "^1.10.19",
     "datatables.net-buttons": "^1.5.6",
