--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vue-chartkick": "^0.6.1",
     "vue-click-outside": "^1.1.0",
     "vue-datetime": "^1.0.0-beta.14",
+    "vue-lazyload": "^1.3.3",
     "vue-loader": "^15.9.5",
     "vue-select": "^3.11.2",
     "vue-template-compiler": "^2.6.12",
