--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -27,3 +27,9 @@ staging:
     include_metadata: true
     description: "This worker dispatch scenario event that was enqueued"
     enabled: true
+
+  WorkerInsightAnalyzer:
+    cron: "0 0 * * * *" # Runs every minute
+    include_metadata: true
+    description: "This worker retrieve insight data using line api"
+    enabled: true
