--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -16,25 +16,25 @@ staging:
   concurrency: 15
 
 :schedule:
-  WorkerDispatchBroadcast:
+  DispatchBroadcastWorker:
     cron: "0 * * * * *" # Runs every minute
     include_metadata: true
     description: "This worker dispatch broadcast that was enqueued"
     enabled: true
 
-  WorkerDispatchScenarioEvent:
+  DispatchScenarioEventWorker:
     cron: "0 * * * * *" # Runs every minute
     include_metadata: true
     description: "This worker dispatch scenario event that was enqueued"
     enabled: true
 
-  WorkerGetNumberOfMessageDelivery:
+  GetNumberOfMessageDeliveryWorker:
     cron: "0 0 5 * * *" # Runs every day
     include_metadata: true
     description: "This worker retrieve insight data using line api"
     enabled: true
 
-  WorkerMonthlyInsightAnalyzer:
+  MonthlyInsightAnalyzerWorker:
     cron: "0 0 6 * * *" # Runs every day
     include_metadata: true
     description: "This worker analyze quota consumption"
