Add job to sync friend infos (run daily at 3:00 AM)

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -40,6 +40,12 @@ staging:
     description: "This worker retrieve insight data using line api"
     enabled: true
 
+  DailySyncFriendsWorker:
+    cron: "0 0 3 * * *" # Runs every day
+    include_metadata: true
+    description: "This worker sync friends information for all account"
+    enabled: true
+
   MonthlyInsightAnalyzerWorker:
     cron: "0 0 6 * * *" # Runs every day
     include_metadata: true
