--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,9 +11,14 @@ amazon:
   service: S3
   access_key_id: <%= ENV["S3_ACCESS_KEY_ID"] %>
   secret_access_key: <%= ENV["S3_SECRET_ACCESS_KEY"] %>
-  region: ap-northeast-1
+  region: asia-northeast1
   bucket: <%= ENV["S3_BUCKET_NAME"] %>
 # Remember not to checkin your GCS keyfile to a repository
+google:
+  service: GCS
+  project: insight-line-crm
+  credentials: <%= Rails.root.join("config/secrets/gcs-stg.json") %>
+  bucket: line-cms-stg
 # google:
 #   service: GCS
 #   project: your_project
