--- a/config/database.yml
+++ b/config/database.yml
@@ -36,6 +36,15 @@ test:
   database: <%= ENV['DATABASE_NAME'] %>_test
   host: <%= ENV.fetch("DATABASE_HOST") %>
 
+staging:
+  <<: *default
+  encoding: utf8mb4
+  collation: utf8mb4_general_ci
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
+  database: <%= ENV['DATABASE_NAME'] %>
+
 production:
   <<: *default
   encoding: utf8mb4
