--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ SMTP_USER_NAME=''
 SMTP_USER_PASSWORD=''
 SUPPORT_EMAIL=''
 
-# AWS S3
+STORAGE_DRIVER=local
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
