--- a/config/storage.yml
+++ b/config/storage.yml
@@ -19,6 +19,7 @@ google:
   project: insight-line-crm
   credentials: <%= Rails.root.join("config/secrets/gcs-stg.json") %>
   bucket: line-cms-stg
+  public: true
 # google:
 #   service: GCS
 #   project: your_project
