--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "vue-datetime": "^1.0.0-beta.14",
     "vue-lazyload": "^1.3.3",
     "vue-loader": "^15.9.5",
+    "vue-multiselect": "^2.1.6",
     "vue-select": "^3.11.2",
     "vue-template-compiler": "^2.6.12",
     "vue2-daterange-picker": "^0.6.2",
