--- a/.github/workflows/dep_dev.yml
+++ b/.github/workflows/dep_dev.yml
@@ -6,7 +6,70 @@ on:
       - develop
 
 jobs:
-  build:
+  test:
+    runs-on: ubuntu-latest
+    services:
+      # How to use MySQL
+      mysql:
+        image: mysql:8.0.20
+        env:
+          MYSQL_ROOT_PASSWORD: root
+        ports:
+          - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Ruby 2.6
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.6.3
+      - name: Install bundler
+        run: |
+          gem install bundler
+      - name: Running rubocop
+        run: |
+          bundle install --jobs 4 --retry 3
+          rubocop
+      - name: Install Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
+      - name: Install npm dependencies
+        run: npm install
+      - name: Checking coding convention
+        run: |
+          npm run lint
+
+      - name: Verify MySQL connection from host
+        run: |
+          sudo apt-get install -y mysql-client libmysqlclient-dev
+          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports[3306] }} -uroot -proot -e "SHOW GRANTS FOR 'root'@'localhost'"
+      - name: Bundle Install and Create DB
+        env:
+          RAILS_ENV: test
+          DATABASE_USERNAME: root
+          DATABASE_PASSWORD: root
+          DATABASE_HOST: 127.0.0.1
+          DATABASE_PORT: ${{ job.services.mysql.ports[3306] }}
+        run: |
+          cp .env.ci .env
+          cp config/database.yml.ci config/database.yml
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3 --path vendor/bundle
+          bin/rails db:prepare
+      - name: Run tests
+        env:
+          RAILS_ENV: test
+          DATABASE_USERNAME: root
+          DATABASE_PASSWORD: root
+          DATABASE_HOST: 127.0.0.1
+          DATABASE_PORT: ${{ job.services.mysql.ports[3306] }}
+        run: |
+          bundle exec rspec
+
+  deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
