--- a/.github/workflows/dep_dev.yml
+++ b/.github/workflows/dep_dev.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Verify MySQL connection from host
         run: |
-          sudo apt-get install -y mysql-client libmysqlclient-dev
+          sudo apt-get install -y mysql-client-8.0 libmysqlclient-dev
           mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports[3306] }} -uroot -proot -e "SHOW GRANTS FOR 'root'@'localhost'"
       - name: Bundle Install and Create DB
         env:
