--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,6 @@ MIX_ROOT_PATH=http://localhost:3000
 
 PMS_API_URL=https://public-v1-stg.api.hotel-insight.jp
 PMS_API_KEY=
+
+# Line Liff
+LIFF_ID=
