--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vue-lazyload": "^1.3.3",
     "vue-loader": "^15.9.5",
     "vue-multiselect": "^2.1.6",
+    "vue-qrcode-component": "^2.1.1",
     "vue-select": "^3.11.2",
     "vue-template-compiler": "^2.6.12",
     "vue2-daterange-picker": "^0.6.2",
