--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vue-chartkick": "^0.6.1",
     "vue-click-outside": "^1.1.0",
     "vue-datetime": "^1.0.0-beta.14",
+    "vue-google-oauth2": "^1.5.8",
     "vue-lazyload": "^1.3.3",
     "vue-loader": "^15.9.5",
     "vue-multiselect": "^2.1.6",
