--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,4 @@ MIX_ROOT_PATH=http://localhost:3000
 PMS_API_URL=https://public-v1-stg.api.hotel-insight.jp
 PMS_API_KEY=YOUR_KEY
 GOOGLE_OAUTH_CLIENT_ID=YOUR_KEY
+GOOGLE_OAUTH_CLIENT_SECRET=YOUR_KEY
