feature action precheckin

--- a/.env.ci
+++ b/.env.ci
@@ -33,3 +33,7 @@ MIX_ROOT_PATH=http://localhost:3000
 PMS_API_URL=https://public-v1-stg.api.hotel-insight.jp
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_CLIENT_SECRET=
+
+# Insight OpenAPI
+X_API_KEY = 
+API_END_POINT = 
