--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -86,8 +86,8 @@ test:
 production:
   <<: *default
 
-  # Production depends on precompilation of packs prior to booting for performance.
-  compile: false
+  # Enable compilation in production for now
+  compile: true
 
   # Extract and emit a css file
   extract_css: true
