--- a/.github/workflows/fly-deploy-dev.yml
+++ b/.github/workflows/fly-deploy-dev.yml
@@ -1,4 +1,4 @@
-name: Deploy to development server
+name: Fly Deploy Development
 
 on:
   push:
@@ -7,11 +7,10 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     services:
-      # How to use MySQL
       mysql:
-        image: mysql:8.0.20
+        image: mysql:8.0
         env:
           MYSQL_ROOT_PASSWORD: root
         ports:
@@ -19,24 +18,27 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - uses: actions/checkout@v2.3.5
-      - name: Set up Ruby 2.6
+      - uses: actions/checkout@v4
+      
+      - name: Set up Ruby 3.3.6
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6.3
-      - name: Install bundler
-        run: |
-          gem install bundler
+          ruby-version: 3.3.6
+          bundler-cache: true
+          
       - name: Running rubocop
         run: |
           bundle install --jobs 4 --retry 3
           rubocop
+          
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
-          node-version: "12.x"
+          node-version: "20.x"
+          
       - name: Install npm dependencies
         run: npm install
+        
       - name: Checking coding convention
         run: |
           npm run lint
@@ -45,6 +47,7 @@ jobs:
         run: |
           sudo apt-get install -y mysql-client libmysqlclient-dev
           mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports[3306] }} -uroot -proot -e "SHOW GRANTS FOR 'root'@'localhost'"
+          
       - name: Bundle Install and Create DB
         env:
           RAILS_ENV: test
@@ -58,6 +61,7 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3 --path vendor/bundle
           bin/rails db:prepare
+          
       - name: Run tests
         env:
           RAILS_ENV: test
@@ -70,20 +74,11 @@ jobs:
 
   deploy:
     needs: test
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
+    concurrency: deploy-dev
     steps:
-      - uses: actions/checkout@v2.3.5
-      - name: Set up Ruby 2.6
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.6.3
-      - name: Install SSH key
-        uses: webfactory/ssh-agent@v0.4.1
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Bundle install
-        run: |
-          RAILS_ENV=development bundle install
-      - name: Deploy to development server
-        run: |
-          bundle exec cap development deploy
+      - uses: actions/checkout@v4
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --config fly.development.toml --app hatamotohq-dev --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
