--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "apidoc": "^0.25.0",
     "autoprefixer": "^10.4.21",
     "esbuild": "^0.25.5",
+    "esbuild-vue": "^1.2.2",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
