--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.1.4-1",
+    "@vue/compat": "^3.5.16",
+    "@vue/compiler-sfc": "^3.5.16",
     "axios": "^0.21.2",
     "bootstrap-vue": "^2.17.3",
     "chart.js": "^2.9.4",
@@ -35,7 +37,7 @@
     "v-viewer": "^1.6.4",
     "vee-validate": "^2.2.15",
     "vee-validate-locale-ja": "^1.0.5",
-    "vue": "^2.6.12",
+    "vue": "^3.5.16",
     "vue-chartkick": "^0.6.1",
     "vue-click-outside": "^1.1.0",
     "vue-datetime": "^1.0.0-beta.14",
@@ -45,18 +47,18 @@
     "vue-multiselect": "^2.1.6",
     "vue-qrcode-component": "^2.1.1",
     "vue-select": "^3.11.2",
-    "vue-template-compiler": "^2.6.12",
     "vue2-daterange-picker": "^0.6.2",
     "vue2-google-maps": "^0.10.7",
-    "vuex": "^3.5.1",
+    "vuex": "^4.1.0",
     "vuex-persistedstate": "^3.1.0",
     "weekstart": "^1.0.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.4",
     "apidoc": "^0.25.0",
     "autoprefixer": "^10.4.21",
     "esbuild": "^0.25.5",
-    "esbuild-vue": "^1.2.2",
+    "esbuild-plugin-vue3": "^0.4.2",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
@@ -66,7 +68,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "unplugin-vue-components": "^0.27.5",
+    "vue-template-compiler": "^2.7.16"
   },
   "browserslist": [
     "defaults"
