--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,7 @@
     "env": {
       "browser": true,
       "es6": true,
-      "node": true,
-      "jquery": true
+      "node": true
     },
     "extends": ["plugin:vue/essential", "standard"],
     "globals": {
