PostgreSQLへの移行に伴い、データベース設定を修正し、Dockerfileから不要なCSSビルドコマンドを削除しました。また、アセットビルドのトラッキングを.gitignoreに追加しました。

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ rails_server.log
 /coverage
 /app/assets/builds/*
 !/app/assets/builds/.keep
+/public/app/assets/builds
 
 # Vite Ruby
 /public/vite*
