--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "doc": "apidoc -i doc/api -o doc/public",
     "build": "vite build",
     "build:esbuild": "node esbuild.config.mjs",
-    "dev": "vite",
+    "dev": "vite"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@ckeditor/ckeditor5-vue": "^7.3.0",
     "@fawmi/vue-google-maps": "^0.9.79",
@@ -43,6 +44,7 @@
     "vue": "^3.5.16",
     "vue-chartkick": "^1.1.0",
     "vue-clipboard3": "^2.0.0",
+    "vue-multiselect": "^2.1.9",
     "vue-select": "^4.0.0-beta.6",
     "vue3-google-oauth2": "^1.0.7",
     "vue3-lazyload": "^0.3.8",
